# projekt_dyplomowy

./: .gitignore  README.md  docker-compose.yml  et --soft HEAD@{1}  main.py  pyproject.toml  test_ai.py  test_ai_markowitz.py  uv.config.ts
AI/: evaluate_ai_recommendation.py  evaluate_bayesian_lstm.py  evaluate_cnn_transformer.py  evaluate_risk_classifier.py  prediction_model.h5  prediction_model_5d_scaler.pkl  prediction_model_scaler.pkl  price_forecast_bayesian_lstm.h5  price_forecast_scaler.pkl  recommendation_model.pkl  risk_model_best.h5  scaler.pkl  scaler_lstm.pkl
AI/prediction_returns/: prediction_model.h5  prediction_model_5d.h5  prediction_model_5d_scaler_return.pkl  prepare_data.py  train.py  train_cnn_transformer.py
AI/recommendation_model/: recommendation_model.pkl  recommendation_model_scaler.pkl  train.py  train_ai_recommendation.py
AI/recommendation_model/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
AI/train_code/: README.txt  dataset.csv  risk_classifier.py  risk_classifier_2.py  risk_lstm_model.h5  risk_model.h5  scaler.pkl  symbols_seen.json  yahoo_pipeline.py
AI/train_code/data/: AOS.csv  MMM.csv
AI/train_code_clasification/: risk_classifier_lstm.py  risk_lstm_model.h5  scaler_lstm.pkl  train_risk_classifier.py  yahoo_pipeline.py
AI/train_code_price_prediction/: train_bayesian_lstm.py
backend/: main.py  pyproject.toml
backend/app/: main.py
backend/app/db/: database.py  init_db.py
backend/app/models/: models.py
backend/app/schemas/: asset.py  optimization_schema.py  portfolio.py  risk.py  transaction.py
backend/app/services/: markowitz_ai.py  optimization.py  risk_analysis.py  yahoo.py
docker/: Dockerfile.backend
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  tickers.json
frontend/src/components/: Layout.jsx  Navbar.jsx  Sidebar.jsx
frontend/src/pages/: AssetRisk.jsx  Chart.jsx  Ideas.jsx  Portfolio.jsx  PortfolioManagement.jsx  PortfolioOptimization.jsx  PortfolioRisk.jsx  Prices.jsx  Risk.jsx  TransactionForm.jsx  Transactions.jsx
frontend/src/services/: api.js
(+25 files in other folders)
