[project]
name = "projekt-dyplomowy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "cvxpy>=1.6.5",
    "fastapi>=0.115.12",
    "keras>=3.10.0",
    "llmprint>=0.1.2",
    "matplotlib>=3.10.3",
    "psycopg2-binary>=2.9.10",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.34.2",
    "yfinance>=0.2.61",
]

[dependency-groups]
dev = [
    "keras>=3.10.0",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "ipykernel>=6.29.5",
    "lxml>=5.4.0",
    "requests>=2.32.3",
    "llmprint>=0.1.2",
]